--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,8 @@
     <title>Contacto</title>
 </head>
 <body>
+    
     <h1>Correo: palomahuenchumil@gmail.com</h1>
+    <p>Instructora</p>
 </body>
 </html>
